// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render error state if untouched and pristine 1`] = `
<div
  className="host"
>
  <input
    className="input"
    placeholder=""
  />
  <div
    className="host validationMessage"
  >
    
  </div>
</div>
`;

exports[`should render with props in invalid state 1`] = `
<div
  className="host"
>
  <input
    className="invalid input input"
    disabled={false}
    hidden={false}
    placeholder="Some placeholder"
  />
  <div
    className="host validationMessage"
  >
    Error message
  </div>
</div>
`;
